--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
     "@material-tailwind/react": "^1.0.6",
     "axios": "^0.25.0",
     "cpf-cnpj-validator": "^1.0.3",
     "daisyui": "^2.1.0",
+    "headlessui": "^0.0.0",
     "next": "^12.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
